--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% if title %}
     <title>{{ title }} - Scoreboard Parser</title>
     {% else %}
