--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,6 @@
 
     </p>
 
-    <p><input type="submit" value="Hit em' with the flex"></p>
+    <p><input type="submit" value="No I won't change this to Piodify"></p>
 </form>
 {% endblock %}
