added dynamic readme at bottom of page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,20 +6,25 @@
     {{ form.hidden_tag() }}
     <p>
     <h2>Match Data: </h2>
-    <label>Url to crawl: </label>{{ form.url_to_search(size=100) }}
+    <label>Url to crawl: </label>{{ form.url_to_search(size=100) }} <br><br>
     <label>Game Name (Game 1 by default): </label>{{ form.game_name(size=20) }}<br><br>
     <label>Tournament Name: </label> {{ form.tournament_name(size=20) }} <br><br>
     <label>Team Scores (0 to 1 in favor of the winner by default): </label>{{ form.blue_score(size=1) }} to
     {{form.purple_score(size=1) }}<br><br>
     <h2>Time Data: </h2>
-    <label> DST:</label> {{ form.daylight_savings_time }} <label> Time Zone:</label> {{ form.time_zone }} <label>Start
-    Time: </label> {{ form.start_time(size=3) }}<br><br>
+    <label>Start Time: </label> {{ form.start_time(size=3) }}<label> DST:</label> {{ form.daylight_savings_time }}
+    <label> Time Zone:</label> {{ form.time_zone }} <br><br>
     <h2>External Link Data: </h2>
     <label>LoL VoD: </label> {{ form.lol_vod(size=100) }} <br><br>
     <label>Youtube VoD: </label> {{ form.youtube_vod(size=100) }} <br><br>
     <label>Picks and Bans Page: </label> {{ form.picks_and_bans_page(size=100) }} <br><br>
     </p>
 
-    <p><input type="submit" value="No I won't change this to Piodify"></p>
+    <p><input type="submit" value="I'll do whatever I want with the button names"></p>
 </form>
+
+<h1>Readme</h1>
+{{ readme }}
+
+
 {% endblock %}
