--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     {% else %}
     <title>Scoreboard Parser</title>
     {% endif %}
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
 <div>Scoreboard Parser: <a href="/index">Home</a></div>
