fixed special champ names I think

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% block content %}
-<h1>Parse a match scoreboard</h1>
+<h1>Parse a Match Scoreboard:</h1>
 <div id="content" class="content">
     <div id="form" class="form margin">
         <form action="" method="post" name="search">
@@ -32,7 +32,7 @@
 
 
     <div id="readme" class="readme margin">
-        <h1>Readme</h1>
+        <h1>Readme:</h1>
 <textarea rows="30" cols="65">
 {{ readme }}
 </textarea>
